--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>collatz</title>
+    <link rel="icon" href="/favicon.svg" />
 
     <link rel="stylesheet" type="text/css" href="/dist/style.css" />
     <script type="text/javascript" src="/dist/script.js" defer></script>
