--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>collatz</title>
     <link rel="icon" href="/favicon.svg" />
 
-    <link rel="stylesheet" type="text/css" href="/dist/style.css" />
-    <script type="text/javascript" src="/dist/script.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="./dist/style.css" />
+    <script type="text/javascript" src="./dist/script.js" defer></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
 </head>
 <body>
