fix log bug + add steps counter + move iteration by 1

--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
             <canvas id="graph2" height="100%" width="100%" style="display: none;"></canvas>
         </div>
     </div>
+
+    <div id="steps" title="steps">0</div>
 </body>
 </html>
