stylize buttons + add error

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
     
         <div id="result">
+            <div id="error"></div>
             <canvas id="graph1" height="100%" width="100%"></canvas>
             <canvas id="graph2" height="100%" width="100%" style="display: none;"></canvas>
         </div>
